<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login_Activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/login_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="15dp"
        android:text="@string/login_description" />



    <TextView
        android:id="@+id/login_nickname_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_description"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="150dp"
        android:text="@string/login_nickname_description" />

    <EditText
        android:id="@+id/login_nickname_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="15dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="Nickname"
        android:layout_below="@+id/login_nickname_description"/>

    <TextView
        android:id="@+id/login_password_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/login_nickname_edittext"
        android:text="@string/login_password_description" />


    <EditText
        android:id="@+id/login_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="Passwort"
        android:layout_below="@+id/login_password_description"/>

    <Button
        android:id="@+id/login_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_confirm_button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/login_password_edittext"
       />

    <Button
        android:id="@+id/login_registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_registration_button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/login_confirm_button"
        />

    <TextView
        android:id="@+id/login_registration_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/login_registration_button"
        android:text="@string/login_registration_description" />

</RelativeLayout>



